<resources>
    <string name="app_name">DonationApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please Donate Generously</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="menuReport">Report</string>
    <string name="reportTitle">Report</string>
    <string name="menuDonate">Donate</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="menuReset">Reset</string>
    <string name="total">Total Donation</string>
    <string name="totalDonated">$ %1d</string>
    <string name="row_upvotes_title">Upvotes</string>
    <string name="row_amount_title">Amount</string>
    <string name="row_method_title">Method</string>
    <string name="delete_image">Delete A Donation Row</string>
</resources>