<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/donateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:text="@string/donateTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/donateSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/donateTitle"
        android:layout_alignEnd="@id/donateTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:text="@string/donateSubtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/donateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp"
        android:text="@string/donateButton" />

    <NumberPicker
        android:id="@+id/amountPicker"
        android:layout_width="61dp"
        android:layout_height="124dp"
        android:layout_alignTop="@id/paymentMethod"
        android:layout_alignEnd="@id/donateSubtitle"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="292dp" />

    <RadioGroup
        android:id="@+id/paymentMethod"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/progressBar"
        android:layout_below="@id/donateSubtitle"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="212dp"
        android:layout_toStartOf="@id/amountPicker">

        <RadioButton
            android:id="@+id/PayPal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paypal" />

        <RadioButton
            android:id="@+id/Direct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direct" />

    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/donateButton"
        android:layout_alignEnd="@id/donateSubtitle"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="27dp" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progressBar"
        android:layout_marginBottom="30dp"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/totalDonated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/total"
        android:layout_alignParentEnd="true"
        android:text="@string/totalDonated"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:layout_alignEnd="@id/amountPicker" />


</RelativeLayout>